Tweak memory settings for Heroku