@@ -7,7 +7,7 @@ sudo apt-get install maven
 mvn clean package -Dmaven.test.skip=true
 
 // Run the single-app server
-java -Xmx256m -Xms256m -Xss256k -XX:+UseCompressedOops -cp oco-all-in-one/target/classes:oco-all-in-one/target/dependency/* com.grahamcrockford.oco.allinone.AllInOneApplication server ./example-developer-mode-config-allinone.yml
+java -cp oco-all-in-one/target/classes:oco-all-in-one/target/dependency/* com.grahamcrockford.oco.allinone.AllInOneApplication server ./example-developer-mode-config-allinone.yml
 
 // Build the UI
 cd oco-ui
@@ -48,7 +48,7 @@ Once you have the connection details, you can set the appropriate section in you
 Then run the backend pointing to this config file instead:
 
 ```
-java -Xmx256m -Xms256m -Xss256k -XX:+UseCompressedOops -cp oco-all-in-one/target/classes:oco-all-in-one/target/dependency/* com.grahamcrockford.oco.allinone.AllInOneApplication server ./my-config.yml
+java -cp oco-all-in-one/target/classes:oco-all-in-one/target/dependency/* com.grahamcrockford.oco.allinone.AllInOneApplication server ./my-config.yml
 
 ```
 
@@ -123,10 +123,10 @@ Backend setup:
     1. Install Maven (`sudo apt-get install maven`)
     1. Run `mvn clean package` to build the application
     1. Next:
-        1. EITHER Start the all-in-one application with `java -Xmx256m -Xms256m -Xss256k -XX:+UseCompressedOops -cp oco-all-in-one/target/classes:oco-all-in-one/target/dependency/* com.grahamcrockford.oco.allinone.AllInOneApplication server ./my-config-all-in-one.yml`.
+        1. EITHER Start the all-in-one application with `java -cp oco-all-in-one/target/classes:oco-all-in-one/target/dependency/* com.grahamcrockford.oco.allinone.AllInOneApplication server ./my-config-all-in-one.yml`.
         1. OR:
-            1. Start the worker application with `java -Xmx256m -Xms256m -Xss256k -XX:+UseCompressedOops -cp oco-worker/target/classes:oco-worker/target/dependency/* com.grahamcrockford.oco.worker.WorkerApplication server ./my-config-worker.yml`.
-            1. Start the web application with `java -Xmx256m -Xms256m -Xss256k -XX:+UseCompressedOops -cp oco-web/target/classes:oco-web/target/dependency/* com.grahamcrockford.oco.web.WebApplication server ./my-config-web.yml`.
+            1. Start the worker application with `java -cp oco-worker/target/classes:oco-worker/target/dependency/* com.grahamcrockford.oco.worker.WorkerApplication server ./my-config-worker.yml`.
+            1. Start the web application with `java -cp oco-web/target/classes:oco-web/target/dependency/* com.grahamcrockford.oco.web.WebApplication server ./my-config-web.yml`.
 1. Or:
     1. Install Eclipse
     1. Install the m2e-apt plugin from the marketplace
@@ -190,7 +190,7 @@ On the backend, set up the environment variables in addition to those already co
 | `OKTA_BASEURL`           | Will be provided during Okta setup (see below) |
 | `OKTA_CLIENTID`           | Will be provided during Okta setup (see below) |
 | `OKTA_ISSUER`           |  Will be provided during Okta setup (see below) |
-| `JAVA_OPTS` | `-Xmx384m -Xms384m -Xss512k -XX:+UseCompressedOops` |
+| `JAVA_OPTS` | `-server -Xmx220m -Xms220m -Xss228k -XX:MaxMetaspaceSize=80m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -Dsun.net.inetaddr.ttl=60` |
 | `LOG_LEVEL` | `INFO` (or `DEBUG` if you need it) |
 | `MAVEN_CUSTOM_OPTS` | `--update-snapshots -DskipTests=true` |
 | `MAVEN_CUSTOM_GOALS` | `clean package` |
